# qa_assitant_platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: api.py
app/connectors/: __init__.py  http.py  mock.py  sql_readonly.py
app/core/: audit.py  audit_sinks.py  chunking.py  doc_index.py  docsources.py  embeddings.py  ingest.py  intent.py  orchestrator.py  packs.py  policy.py  redaction.py  schemas.py  tool_args.py  tools.py
config/: policy.yaml
data/demo/sample_service/howto/: rate_limits.md  rotating_api_keys.md
docs/: PRD.md  architecture.md  design.md  task.md
eval/: __init__.py  howto_golden.json  run.py  security_golden.json  stats_golden.json
packs/sample_service/: pack.py  tools.py
scripts/: dev_run.sh  new_pack.py
tests/: conftest.py  test_api.py  test_chunking.py  test_doc_index.py  test_ingest.py  test_orchestrator.py  test_policy.py  test_redaction.py  test_tool_args.py  test_tools.py
